--- a/.travis.yml
+++ b/.travis.yml
@@ -13,15 +13,15 @@ install:
 script:
   - hexo clean
   - hexo generate
-# 设置git提交名，邮箱；替换真实token到_config.yml文件，最后depoy部署
+
 after_script:
+  - cd ./public
   - git config user.name "lennon"
   - git config user.email "kbjwdh@gmail.com"
-  # 替换同目录下的_config.yml文件中gh_token字符串为travis后台刚才配置的变量，注意此处sed命令用了双引号。单引号无效！
-  - sed -i "s/gh_token/${ACCESS_TOKEN}/g" ./_config.yml
-  - cat ./_config.yml
-  - hexo deploy
+  - git add .
+  - git commit -m "Update by travis ci"
+  - git push --force --quiet "https://${ACCESS_TOKEN}@${GH_REF}" master:master
 # End: Build LifeCycle
 branches:
   only:
-    - master
+    - hexo
