--- a/_config.yml
+++ b/_config.yml
@@ -79,5 +79,5 @@ theme: melody
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://gh_token@github.com/ah-kevin/blog.git
+  repo: https://github.com/ah-kevin/blog.git
   branch: gh-pages
